--- a/notebooks/parse_slack_data.ipynb
+++ b/notebooks/parse_slack_data.ipynb
@@ -12,9 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'wordcloud'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\ezra2\\OneDrive\\Documents\\GitHub\\week0_starter_network_analysis\\notebooks\\parse_slack_data.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/ezra2/OneDrive/Documents/GitHub/week0_starter_network_analysis/notebooks/parse_slack_data.ipynb#W1sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/ezra2/OneDrive/Documents/GitHub/week0_starter_network_analysis/notebooks/parse_slack_data.ipynb#W1sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mnltk\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcorpus\u001b[39;00m \u001b[39mimport\u001b[39;00m stopwords\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/ezra2/OneDrive/Documents/GitHub/week0_starter_network_analysis/notebooks/parse_slack_data.ipynb#W1sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mwordcloud\u001b[39;00m \u001b[39mimport\u001b[39;00m WordCloud\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'wordcloud'"
+     ]
+    }
+   ],
    "source": [
     "import os, sys\n",
     "import re\n",
@@ -95,7 +107,8 @@
     "    \"\"\"\n",
     "\n",
     "    # specify path to get json files\n",
-    "    combined = []\n",
+    "    combined = []#sa\n",
+    "    \n",
     "    for json_file in glob.glob(f\"{path_channel}*.json\"):\n",
     "        with open(json_file, 'r', encoding=\"utf8\") as slack_data:\n",
     "            combined.append(slack_data)\n",
@@ -444,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
